github_data_collector/src/data/issue_comment/spotify_annoy.txt
I have an Image Retrieval application, where each image is stored as a vector (D-dimensional) and then we compute the similarity of a query image against the database by the dot product. These are the features we need to support:

1) Our initial "database" can have a few saved vectors.
2) Many different users can query for similar images at the same time.
3) Many different users can store batches (1 to N) of **new** vectors in our "database".
4) A user can remove a batch of vectors from our "database".
5) Memory-efficient, i.e., I can't load all the database to memory to return the most similar vectors.

Reading the docs, I concluded:

A) Reading and Writing at the same time is not possible, but this is not a huge deal for us
B) Annoy does not let you add items to existing indexes. So, we need to create a new index every time we receive a new batch of vectors? Then, at search time, we would need to search in every index, right?

Am I on the right path?

Thanks
Hi all, 
I am trying to install this package locally by running `python setup.py install`.
For reasons of how the system on which I am working works, I cannot simply install the package through pip (it does not allow for external internet acces), so I need to manually upload the package to the system and build from there.

The problem is that I keep running into an error when I am trying to build the package, and I can't figure out what is causing it.
Here is the error message:

**-> % python setup.py install
running install
running bdist_egg
running egg_info
writing annoy.egg-info/PKG-INFO
writing top-level names to annoy.egg-info/top_level.txt
writing dependency_links to annoy.egg-info/dependency_links.txt
reading manifest file 'annoy.egg-info/SOURCES.txt'
reading manifest template 'MANIFEST.in'
writing manifest file 'annoy.egg-info/SOURCES.txt'
installing library code to build/bdist.linux-x86_64/egg
running install_lib
running build_py
running build_ext
building 'annoy.annoylib' extension
gcc -pthread -B /home/ec2-user/anaconda3/envs/tensorflow_p27/compiler_compat -Wl,--sysroot=/ -fno-strict-aliasing -g -O2 -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -fPIC -I/home/ec2-user/anaconda3/envs/tensorflow_p27/include/python2.7 -c src/annoymodule.cc -o build/temp.linux-x86_64-2.7/src/annoymodule.o -march=native -O3 -ffast-math -fno-associative-math
cc1plus: error: unrecognized command line option ‘-mno-sha’
cc1plus: error: unrecognized command line option ‘-mno-sgx’
cc1plus: error: unrecognized command line option ‘-mno-avx512f’
cc1plus: error: unrecognized command line option ‘-mno-avx512er’
cc1plus: error: unrecognized command line option ‘-mno-avx512cd’
cc1plus: error: unrecognized command line option ‘-mno-avx512pf’
cc1plus: error: unrecognized command line option ‘-mno-prefetchwt1’
cc1plus: error: unrecognized command line option ‘-mno-clflushopt’
cc1plus: error: unrecognized command line option ‘-mno-xsavec’
cc1plus: error: unrecognized command line option ‘-mno-xsaves’
cc1plus: error: unrecognized command line option ‘-mno-avx512dq’
cc1plus: error: unrecognized command line option ‘-mno-avx512bw’
cc1plus: error: unrecognized command line option ‘-mno-avx512vl’
cc1plus: error: unrecognized command line option ‘-mno-avx512ifma’
cc1plus: error: unrecognized command line option ‘-mno-avx512vbmi’
cc1plus: error: unrecognized command line option ‘-mno-avx5124fmaps’
cc1plus: error: unrecognized command line option ‘-mno-avx5124vnniw’
cc1plus: error: unrecognized command line option ‘-mno-clwb’
cc1plus: error: unrecognized command line option ‘-mno-mwaitx’
cc1plus: error: unrecognized command line option ‘-mno-clzero’
cc1plus: error: unrecognized command line option ‘-mno-rdpid’
cc1plus: warning: command line option ‘-Wstrict-prototypes’ is valid for C/ObjC but not for C++ [enabled by default]
src/annoymodule.cc:1:0: error: bad value (broadwell) for -march= switch
 // Copyright (c) 2013 Spotify AB
 ^
src/annoymodule.cc:1:0: error: bad value (broadwell) for -mtune= switch
error: command 'gcc' failed with exit status 1**


I would appreciate any help, thanks!




### Runtime
Annoy 1.16.0
AWS Lambda Python 3.6 Runtime

### Problem
Annoy causes an interpreter crash. AWS just continues to use the same Lambda container for subsequent calls, but the container just continues to fail each time.

### More details
Index has 1300 items
The vectors are 150 in length
Configured at 10 trees
Using `angular` metric
The index is packaged with the Lambda code

Problem seems to take place when calling either
- get_nns_by_item
- get_distance
- get_nns_by_vector (did not test, but I'm assuming same code path that causes issue)

Nothing is printed to the console. The Lambda just terminates with a "Process exited before completing request" message in the logs

I tried to see if I can identify an issue when loading the Annoy index by calling
- get_n_items
- get_n_trees
- get_item_vector

but all worked fine.

The same packaged code also yields lambda instances that work fine. It seems that once the lambda is able successfully call `get_nns_by_item` it just works. Instances that fail on a call to `get_nns_by_item`, never recover. Note that since the interpreter crashes, the next time Lambda invokes the same lambda instance/container, it goes through the entire Cold Start process and loads the index again.

The most unfortunate part of this is that since there is no way of trapping the problem in the Python code (or at least I have not found a way), the Lambda exist but AWS continues to reuse the instance. If we could catch these error at the python level, I could throw a RuntimeError to force the destruction of the instance.

Any help is appreciated.
Would like to try this library for my ongoing project. Windows 10 installation for python instructions still do not exist on official web site. How to resolve this issue?
We have seen much speedup by executing both the random projection and tree building computations in GPUs. I am thinking the querying might also benefit from performance gains on GPUs. 

I'm wondering if the indices in Annoy could be mapped to GPU memory for a significant performance gain. Do you see any benefit to this? Is Annoy still actively being used at Spotify?


The latest version fails to build the index on disk. 

Building the index results in 

`Error truncating file: Input/output error`

Same code works on 1.15.2. 

Python 3.7 Windows 10
when i run program in windows 10,I can add_item and build many times. However, when i run programe in linux,I can only build one time.what is wrong whit this!
Hello,

I cannot compile due the absence of the mentioned header files. I was hoping that they are present in the same directory as "annoymodule.cc"

I am using CentOS 7 and python-devel is installed.

The documentation for `search_k` is inconsistent.

In some places, it says: "search_k nodes which defaults to n_trees * n if not provided"

In other places, it says: "If search_k is not provided, it will default to n * n_trees * D where n is the number of approximate nearest neighbors and D is a constant depending on the metric."

Which is it?

And if it is `D`, could you enumerate the different `D` values for each metric? I searched the code for a few minutes but I was unable to determine what D is.